modules/gdscript/tests/scripts/analyzer/errors/if_var_use_in_else.gd
func test():
    if var x = 100:
        print("t")
    else:
        print(x)
